--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/style.css" >
 </head>
 
-<body class="lightblue">
+<body >
 
   <section id="header">
     <header class="p-3  border-bottom">
@@ -107,11 +107,81 @@
 
   </section>
 
-  <!-- Experience -->
-  <section id="experience">
+  <!-- Recent Project -->
+  <section id="recentproject" class="lightblue">
+    <div class="container px-4 py-5" id="custom-cards">
+      <h3 class="display-5 fw-bold text-body-emphasis lh-1">Recent Project</h3>
+  
+      <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('./images/rc1.png');">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Deep Learning</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a pulvinar purus, at condimentum massa. Vestibulum fringilla commodo nunc nec imperdiet. Nullam nec feugiat elit, quis pellentesque dolor. Nulla vitae euismod erat. Sed porttitor justo neque, lacinia scelerisque tortor tincidunt sit amet. 
+              </p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('./images/rc2.png');">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Go App</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a pulvinar purus, at condimentum massa. Vestibulum fringilla commodo nunc nec imperdiet. Nullam nec feugiat elit, quis pellentesque dolor. Nulla vitae euismod erat. Sed porttitor justo neque, lacinia scelerisque tortor tincidunt sit amet. 
+              </p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('./images/rc3.png');">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Travel App</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a pulvinar purus, at condimentum massa. Vestibulum fringilla commodo nunc nec imperdiet. Nullam nec feugiat elit, quis pellentesque dolor. Nulla vitae euismod erat. Sed porttitor justo neque, lacinia scelerisque tortor tincidunt sit amet. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </section>
 
+  <!-- Skills -->
+  <section id="skills">
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-start g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-4 ">
+          <img src="/images/skills.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="300" loading="lazy">
+        </div>
+        <div class="col-lg-8">
+          <div class="row flex-lg-row-reverse mb-5 align-items-center justify-content-between">
+            <div class="col-6">
+              <h4 class="display-5 fw-bold text-body-emphasis lh-1">Personal Skills</h4>
+            </div>
+            <div class="col-lg-5" id="greenline">
+            </div>
+          </div>
+          <p class="lead mb-5">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a pulvinar purus, at condimentum massa. Vestibulum fringilla commodo nunc nec imperdiet. Nullam nec feugiat elit, quis pellentesque dolor. Nulla vitae euismod erat. Sed porttitor justo neque, lacinia scelerisque tortor tincidunt sit amet. Nulla posuere elementum metus, vel aliquam nibh fringilla ac. Ut quis dignissim urna, sit amet ullamcorper ante. Aliquam vitae est augue. 
+          </p>
+
+          <div class="grid text-center" style="--bs-gap: .25rem 1rem;">
+            <div class="g-col-6">.g-col-6</div>
+            <div class="g-col-6">.g-col-6</div>
+          
+            <div class="g-col-6">.g-col-6</div>
+            <div class="g-col-6">.g-col-6</div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+  </section>
   <!-- Footer -->
   <section id="footer" class="gradient-background">
   </section>
