--- a/index.html
+++ b/index.html
@@ -169,20 +169,122 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a pulvinar purus, at condimentum massa. Vestibulum fringilla commodo nunc nec imperdiet. Nullam nec feugiat elit, quis pellentesque dolor. Nulla vitae euismod erat. Sed porttitor justo neque, lacinia scelerisque tortor tincidunt sit amet. Nulla posuere elementum metus, vel aliquam nibh fringilla ac. Ut quis dignissim urna, sit amet ullamcorper ante. Aliquam vitae est augue. 
           </p>
 
-          <div class="grid text-center" style="--bs-gap: .25rem 1rem;">
-            <div class="g-col-6">.g-col-6</div>
-            <div class="g-col-6">.g-col-6</div>
-          
-            <div class="g-col-6">.g-col-6</div>
-            <div class="g-col-6">.g-col-6</div>
-          </div>
+          <div class="row flex-lg-row mb-2 align-items-center justify-content-start">
+            <div class="col-6">
+              <div class="row ms-0">
+                <p class="mb-2 px-0 fw-bold" style="font-size: larger;">Machine Learning</p>
+              </div>
+              <div class="row flex-lg-row mb-5 ms-0 align-items-center justify-content-start">
+                <div class="col-6" style="background-color:#a6a6a6; height: 12px;">
+                  <div class="row">
+                    <div class="col-9" style="background-color: #94d8a8; height:12px;"></div>
+                  </div>
+                </div>
+                <div class="col-4 col-sm-3">
+                  <p class="lh-1 mb-0" style="font-size: larger;">85%</p>
+                </div>
+              </div>
+            </div>
 
+            <div class="col-6">
+              <div class="row ms-0">
+                <p class="mb-2 px-0 fw-bold" style="font-size: larger;">Security</p>
+              </div>
+              <div class="row flex-lg-row mb-5 ms-0 align-items-center justify-content-start">
+                <div class="col-6 " style="background-color:#a6a6a6; height: 12px;">
+                  <div class="row">
+                    <div class="col-11" style="background-color: #94d8a8; height:12px;"></div>
+                  </div>
+                </div>
+                <div class="col-4 col-sm-3">
+                  <p class="lh-1 mb-0" style="font-size: larger;">90%</p>
+                </div>
+              </div>
+            </div>
+        </div>
+
+          <div class="row flex-lg-row mb-5 align-items-center justify-content-start">
+            <div class="col-6">
+              <div class="row ms-0">
+                <p class="mb-2 px-0 fw-bold" style="font-size: larger;">Web Development</p>
+              </div>
+              <div class="row flex-lg-row mb-5 ms-0 align-items-center justify-content-start">
+                <div class="col-6" style="background-color:#a6a6a6; height: 12px;">
+                  <div class="row">
+                    <div class="col-11" style="background-color: #94d8a8; height:12px;"></div>
+                  </div>
+                </div>
+                <div class="col-4 col-sm-3">
+                  <p class="lh-1 mb-0" style="font-size: larger;">95%</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-6">
+              <div class="row ms-0">
+                <p class="mb-2 px-0 fw-bold" style="font-size: larger;">Algorithm</p>
+              </div>
+              <div class="row flex-lg-row mb-5 ms-0 align-items-center justify-content-start">
+                <div class="col-6 " style="background-color:#a6a6a6; height: 12px;">
+                  <div class="row">
+                    <div class="col-9" style="background-color: #94d8a8; height:12px;"></div>
+                  </div>
+                </div>
+                <div class="col-4 col-sm-3">
+                  <p class="lh-1 mb-0" style="font-size: larger;">85%</p>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </div>
+  </section>
+
+  <!-- Best Work -->
+  <section id="bestwork" class="lightblue">
+      <div class="container col-xxl-8 px-4 py-5">
+        
+          <div class="row flex-lg-row mb-0 align-items-center">
+            <div class="col-4">
+              <h2 class="display-5 fw-bold text-body-emphasis lh-1">My Best Work</h2>
+            </div>
+            <div class="col-lg-8" id="greenline">
+            </div>
+          </div>
+
+        <div class="row flex-lg-row-reverse align-items-start justify-content-between g-5 py-5">
+          <div class="col-lg-7 ">
+            <img src="./images/bestWork.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="100%" loading="lazy">
+          </div>
+          <div class="col-lg-5 pe-5">
+            <h4 class="fw-bold  lh-1 mb-3" style="color: #286d3c;">Machine Learning</h4>
+            <p class="lead ">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a pulvinar purus, at condimentum massa. Vestibulum fringilla commodo nunc nec imperdiet. 
+            </p>
+            <h4 class="fw-bold  lh-1 mb-3" style="color: #286d3c;">Machine Learning</h4>
+            <p class="lead ">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a pulvinar purus, at condimentum massa. Vestibulum fringilla commodo nunc nec imperdiet. 
+            </p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 mt-5">See More</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+  </section>
+
+
+  <!--Achievement-->
+  <section id="achievement">
+  
+
+
 
   </section>
-  <!-- Footer -->
+
+
+
   <section id="footer" class="gradient-background">
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
