--- a/index.html
+++ b/index.html
@@ -277,7 +277,81 @@
 
   <!--Achievement-->
   <section id="achievement">
-  
+    <div class="container col-xxl-8 px-2 py-5 my-5">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="row flex-lg-row justify-content-even py-5">
+        <div class="col-lg-4">
+          <div class="container" style="display: flex; flex-direction: column; justify-content: center; align-items:center">
+            <img class="rounded-circle mb-3" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <h3 class="">Competiton</h3>
+            <p class="text-center"> Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+          </div>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <div class="container" style="display: flex; flex-direction: column; justify-content: center; align-items:center">
+            <img class="rounded-circle mb-3" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <h2 class="fw-bold lh-1" style="color: #286d3c;">Best Award</h2>
+            <p class="text-center">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+          </div>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <div class="container" style="display: flex; flex-direction: column; justify-content: center; align-items:center">
+            <img class="rounded-circle mb-3" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <h3>Champin</h3>
+            <p class="text-center">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+          </div>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+  </section>
+
+  <section id="contact info" class="lightblue">
+    <div class="container col-xxl-8 px-4 py-5 ">
+      <div class="row flex-lg-row align-items-start justify-content-between g-5 py-5 mb-3">
+        <div class="col-lg-4 ">
+          <img src="/images/contact.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" loading="lazy">
+        </div>
+        <div class="col-lg-7">
+          <div class="row flex-lg-row mb-5 justify-content-between align-items-center">
+            <div class="col-5">
+              <h2 class="display-5 fw-bold text-body-emphasis lh-1">Contact Information</h2>
+            </div>
+            <div class="col-lg-6" id="greenline"></div>
+            <div class="row mt-5">
+                <div class="col-4">
+                  <h3 class="fw-bold  lh-1 mb-3" style="color: #286d3c;">Email: </h3>
+                </div>
+                <div class="col-8">
+                  <a href="" style="font-style: italic; font-size: x-large;">www.testplacehoder@mgmail.com</a> 
+              </div>
+              </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-4">
+                  <h3 class="fw-bold  lh-1 mb-3" style="color: #286d3c;">LinkedIn: </h3>
+                </div>
+                <div class="col-8">
+                  <a href="" style="font-style: italic; font-size: x-large;">www.linkedin.com</a> 
+              </div>
+            </div>
+
+            <div class="row justify-content-start mt-5">
+                <div class="col-4">
+                  <h3 class="fw-bold  lh-1 mb-3" style="color: #286d3c;">Phone: </h3>
+                </div>
+                <div class="col-8">
+                  <a href="" style="font-style: italic; font-size: x-large;">+1 111-111-1111</a> 
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
@@ -285,8 +359,6 @@
 
 
 
-  <section id="footer" class="gradient-background">
-  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
