--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="container col-xxl-8 px-4 py-5">
       <div class="row flex-lg-row align-items-start g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-4 ">
-          <img src="/images/dogImg.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" loading="lazy">
+          <img src="./images/dogImg.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" loading="lazy">
         </div>
         <div class="col-lg-8">
           <div class="row flex-lg-row mb-5 align-items-center">
@@ -155,7 +155,7 @@
     <div class="container col-xxl-8 px-4 py-5">
       <div class="row flex-lg-row-reverse align-items-start g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-4 ">
-          <img src="/images/skills.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="300" loading="lazy">
+          <img src="./images/skills.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="300" loading="lazy">
         </div>
         <div class="col-lg-8">
           <div class="row flex-lg-row-reverse mb-5 align-items-center justify-content-between">
@@ -312,7 +312,7 @@
     <div class="container col-xxl-8 px-4 py-5 ">
       <div class="row flex-lg-row align-items-start justify-content-between g-5 py-5 mb-3">
         <div class="col-lg-4 ">
-          <img src="/images/contact.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" loading="lazy">
+          <img src="./images/contact.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" loading="lazy">
         </div>
         <div class="col-lg-7">
           <div class="row flex-lg-row mb-5 justify-content-between align-items-center">
